fixes spacing in quiz page

--- a/src/App.css
+++ b/src/App.css
@@ -124,7 +124,7 @@
   justify-content: center;
   text-align: center;
   max-width: 60%;
-  margin: 10% auto 0;
+  margin: 3% auto 0;
   min-height: 40vh;
   opacity: 0.8; 
   background-color: #b8cdcf;
@@ -144,4 +144,17 @@
   min-height: 40vh;
   opacity: 0.8; 
   background-color: #b8cdcf;
+}
+
+.final-page-button button {
+  background-color: #333; 
+  color: #fff; 
+  padding: 0.7rem 1.5rem;
+  font-size: 1.2rem;
+  border-radius: 25px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin-top: 1rem; 
+  margin-left: 41px;
 }
